Add KeyHelper for wallet generation and private key deletion
- Removed Wallet class, as it is no longer needed
~ Renamed WalletTest to KeyTest
+ Added key generation test